# ThaiOS

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  configure
.github/workflows/: build-iso.yml  build.yml
ai/: thai_ai.h  thai_ai_core.c
apps/ThaiBackup/: Makefile
apps/ThaiBrowser/: Makefile
apps/ThaiEditor/: Makefile
apps/ThaiFiles/: Makefile
apps/ThaiMedia/: Makefile
apps/ThaiSettings/: Makefile
apps/ThaiStore/: Makefile
apps/ThaiTerminal/: Makefile
base/etc/: bash.bashrc  issue  lsb-release  motd  os-release  profile  zshrc
boot/: Makefile
boot/grub/: grub.cfg
boot/isolinux/: isolinux.cfg
boot/limine/: limine.cfg
boot/syslinux/: syslinux.cfg
branding/boot/: splash-config.json
branding/cursors/: default.json
branding/fonts/: font-config.json
branding/sounds/: sound-theme.json
branding/wallpapers/: default-thaios.xml
compositor/: Makefile
compositor/include/: config.h  cursor.h  server.h  theme.h
compositor/src/: config.c  cursor.c  desktop.c  input.c  main.c  renderer.c  server.c  shell.c  theme.c
desktop/app-menu/: Makefile  main.py
desktop/control-center/: Makefile  main.py
desktop/dock/: Makefile  main.py
desktop/notification-center/: Makefile  main.py
desktop/panel/: Makefile  main.py
desktop/shell/: Makefile  main.py
desktop/widgets/: Makefile  main.py
docs/: architecture.md  development.md  user-guide.md
drivers/: Makefile
kernel/: CMakeLists.txt  config  kernel_main.c
kernel/arch/x86_64/: linker.ld
kernel/boot/: boot.c  entry.asm
kernel/include/: ipc.h  mm.h  sched.h  syscall.h  thaios.h
kernel/ipc/: msgqueue.c  sharedmem.c
kernel/lib/: kprintf.c  string.c
kernel/mm/: heap.c  pmm.c  vmm.c
kernel/sched/: process.c  scheduler.c  thread.c
kernel/syscall/: syscall.c  syscall_entry.asm
scripts/: build-iso-final.sh  build-iso.sh  build-rootfs.sh  build-thaios-iso.sh  build.sh  docker-build.ps1  install.sh
thai-installer/: Makefile
thai-pkg/: Makefile
thai-updater/: Makefile
(+33 files in other folders)
